test_apps/test-typechecker/fail/ac/ruleboolexp.app
application test

access control rules

  rule page name()
  {
    1+1
  }